--- a/example-web-jsf-servlet/src/main/webapp/WEB-INF/jsf/components/rowInput.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/WEB-INF/jsf/components/rowInput.xhtml
@@ -3,15 +3,16 @@
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:t="http://myfaces.apache.org/tomahawk"
 	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:e="http://commons.esup-portail.org">
 	<e:li rendered="#{rendered == null || rendered}">
 		<t:htmlTag value="span" styleClass="fl-label">
 			<h:outputLabel id="label#{id}" for="#{id}" value="#{label}" />
-			<t:outputLabel value="*" styleClass="etoileForChpObli"
+			<h:outputLabel value="*" styleClass="etoileForChpObli"
 				rendered="#{obligatory == null || obligatory}" for="label#{id}" />
 		</t:htmlTag>
 		<t:panelGroup>
-			<h:inputText id="#{id}" value="#{text}" size="#{size}"
+			<p:inputText id="#{id}" value="#{text}" size="#{size}"
 				maxlength="#{maxlength}" required="#{required}"
 				disabled="#{disabledInput != null and disabledInput}" />
 		</t:panelGroup>
