--- a/blank-web-jsf-mixed/src/main/webapp/media/iPhone/iPhone.css
+++ b/blank-web-jsf-mixed/src/main/webapp/media/iPhone/iPhone.css
@@ -599,6 +599,7 @@ label {
     color: inherit !important;
     box-sizing: border-box !important;
     webkit-box-sizing: border-box !important;
+    font-size:12pt;
 }
 
 .centerMessageLink {
