--- a/blank-web-jsf-mixed/src/main/webapp/media/iPhone/iPhonePortlet.css
+++ b/blank-web-jsf-mixed/src/main/webapp/media/iPhone/iPhonePortlet.css
@@ -553,6 +553,7 @@ label {
     color: inherit !important;
     box-sizing: border-box !important;
     webkit-box-sizing: border-box !important;
+    font-size:12pt;
 }
 
 .centerMessageLink {
@@ -568,7 +569,7 @@ label {
     color: inherit !important;
     box-sizing: border-box !important;
     -webkit-box-sizing: border-box !important;
-    width: 100% !important;
+    width: 100% !important;*/
     background: url(/media/images/listArrow.png) no-repeat right center !important;
     overflow: hidden;
     text-overflow: ellipsis !important;
