Rendus Mobile. Passage portlet -> servlet. Les exceptions en mode portlet, ce n'est pas réglé (pas d'interception).

--- a/esup-blank-web-jsf-mixed/src/main/webapp/media/iPhone/iPhonePortlet.css
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/media/iPhone/iPhonePortlet.css
@@ -569,7 +569,7 @@ label {
     color: inherit !important;
     box-sizing: border-box !important;
     -webkit-box-sizing: border-box !important;
-    width: 100% !important;*/
+    width: 100% !important;
     background: url(/media/images/listArrow.png) no-repeat right center !important;
     overflow: hidden;
     text-overflow: ellipsis !important;
