--- a/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/_include/_navigation.xhtml
+++ b/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/_include/_navigation.xhtml
@@ -5,15 +5,9 @@
 	xmlns:p="http://primefaces.prime.com.tr/ui">
 	<h:form>
 		<p:menubar>
-			<p:menuitem  value="#{msgs['TREATMENTS.CAS_DEMO']}" action="#{welcomeController.goCasDemo}"/>
-	
-			<p:menuitem value="#{msgs['TREATMENTS.AJAX_DEMO']}" action="#{simpleController.goAjaxDemo}"/>
-	
-			<p:menuitem value="#{msgs['TREATMENTS.EXCEPTION_DEMO']}" action="#{welcomeController.goExceptionDemo}"/>
-	
-			<p:menuitem value="#{msgs['TREATMENTS.JPA_DEMO']}" action="#{welcomeController.goJpaDemo}"/>
-			<p:menuitem  value="#{msgs['TREATMENTS.DEEPLINKING_DEMO']}" action="#{welcomeController.goLinkDemo}"/>
-			<p:menuitem  value="*** Démo Application Todo***" action="#{todoPublicController.goTodoDemo}"/>
+			<p:menuitem  value="#{msgs['TODO_DEMO.MENU.PUBLIC']}" action="#{todoPublicController.goTodoDemo}"/>
+			<p:menuitem  value="#{msgs['TODO_DEMO.MENU.PRIVATE']}" action="#{todoPrivateController.goTodoPrivateDemo}"/>
+			<p:menuitem  value="#{msgs['TODO_DEMO.MENU.ADMIN']}" action="#{todoAdminController.goTodoAdminDemo}"/>
 		</p:menubar>
 	</h:form>
 </div>
