--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/_include/_navigation.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/_include/_navigation.xhtml
@@ -6,13 +6,11 @@
 	<h:form>
 		<p:menubar>
 			<p:menuitem  value="#{msgs['TREATMENTS.CAS_DEMO']}" action="#{welcomeController.goCasDemo}"/>
-	
 			<p:menuitem value="#{msgs['TREATMENTS.AJAX_DEMO']}" action="#{simpleController.goAjaxDemo}"/>
-	
 			<p:menuitem value="#{msgs['TREATMENTS.EXCEPTION_DEMO']}" action="#{welcomeController.goExceptionDemo}"/>
-	
 			<p:menuitem value="#{msgs['TREATMENTS.JPA_DEMO']}" action="#{welcomeController.goJpaDemo}"/>
 			<p:menuitem  value="#{msgs['TREATMENTS.DEEPLINKING_DEMO']}" action="#{welcomeController.goLinkDemo}"/>
+			<p:menuitem  value="#{msgs['TREATMENTS.REST_DEMO']}" action="rest_demo?faces-redirect=true"/>
 		</p:menubar>
 	</h:form>
 </div>
